got load game working to load actual profiles tried adding navigation buttons to profile. didnt work.also added split playerprofile into 2 classes. profile manager handles file reading, creating, loading, saving profiles and displaying them. profile stores info and has the getters to get data